Update from https://github.com/thebesttv/eserver-static/commit/f6d02da6ae0b1aa3cea0c6b118e49755b44eab57

--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-10-27 02:52 -->
+<!-- 2022-10-29 02:51 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,47 +46,47 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgfee7b5a">1. 妙妙文章</a>
+<li><a href="#orgf2cf50a">1. 妙妙文章</a>
 <ul>
-<li><a href="#org817155f">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#orga4c22d0">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org1cd3f7c">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orgc13d7c6">1.4. 关于编辑器</a></li>
-<li><a href="#org06ac25b">1.5. 关于代码</a>
+<li><a href="#org37c5905">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#org59c1600">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#orgbe436c6">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org34365ac">1.4. 关于编辑器</a></li>
+<li><a href="#org2369bcd">1.5. 关于代码</a>
 <ul>
-<li><a href="#org6d8571e">1.5.1. Lisp</a></li>
+<li><a href="#org9ced852">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#orga50a061">1.6. 关于CPU</a></li>
-<li><a href="#org4086a61">1.7. 关于算法</a>
+<li><a href="#org0eed9d2">1.6. 关于CPU</a></li>
+<li><a href="#org797cb7b">1.7. 关于算法</a>
 <ul>
-<li><a href="#orgfa3c55e">1.7.1. 关于随机</a></li>
+<li><a href="#org3fc72bc">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orgcc93b49">1.8. 关于AI</a></li>
-<li><a href="#org46fa782">1.9. 关于软件</a>
+<li><a href="#orgc54ea8f">1.8. 关于AI</a></li>
+<li><a href="#org53a72d1">1.9. 关于软件</a>
 <ul>
-<li><a href="#orge1f311a">1.9.1. SQLite</a></li>
+<li><a href="#orge0c9a5d">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org82adbcb">1.10. 关于workflow</a></li>
+<li><a href="#org816a309">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org9b17241">2. 棒棒视频</a>
+<li><a href="#org3e7b583">2. 棒棒视频</a>
 <ul>
-<li><a href="#org5ac443b">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org42152c2">2.2. 各种剧</a></li>
-<li><a href="#orgdb4442b">2.3. 电影</a></li>
+<li><a href="#orga3bf448">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org79ebc28">2.2. 各种剧</a></li>
+<li><a href="#org2859789">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org660e897">3. 快乐游戏</a></li>
-<li><a href="#org0b5843b">4. 宝藏博主</a></li>
-<li><a href="#org997ab4c">5. 有意思的</a>
+<li><a href="#org3adf814">3. 快乐游戏</a></li>
+<li><a href="#org950f8df">4. 宝藏博主</a></li>
+<li><a href="#orgb7565bb">5. 有意思的</a>
 <ul>
-<li><a href="#org1a8ad14">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orge03afe0">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org5a02904">6. 我想玩的</a></li>
+<li><a href="#orgb4dde82">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -95,8 +95,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orgfee7b5a" class="outline-2">
-<h2 id="orgfee7b5a"><span class="section-number-2">1.</span> <a href="#orgfee7b5a">妙妙文章</a></h2>
+<div id="outline-container-orgf2cf50a" class="outline-2">
+<h2 id="orgf2cf50a"><span class="section-number-2">1.</span> <a href="#orgf2cf50a">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -433,7 +433,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="orgdbc26f0">
+<figure id="org84cf0aa">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -495,8 +495,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org817155f" class="outline-3">
-<h3 id="org817155f"><span class="section-number-3">1.1.</span> <a href="#org817155f">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org37c5905" class="outline-3">
+<h3 id="org37c5905"><span class="section-number-3">1.1.</span> <a href="#org37c5905">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -537,8 +537,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-orga4c22d0" class="outline-3">
-<h3 id="orga4c22d0"><span class="section-number-3">1.2.</span> <a href="#orga4c22d0">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org59c1600" class="outline-3">
+<h3 id="org59c1600"><span class="section-number-3">1.2.</span> <a href="#org59c1600">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -568,8 +568,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org1cd3f7c" class="outline-3">
-<h3 id="org1cd3f7c"><span class="section-number-3">1.3.</span> <a href="#org1cd3f7c">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-orgbe436c6" class="outline-3">
+<h3 id="orgbe436c6"><span class="section-number-3">1.3.</span> <a href="#orgbe436c6">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -603,8 +603,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orgc13d7c6" class="outline-3">
-<h3 id="orgc13d7c6"><span class="section-number-3">1.4.</span> <a href="#orgc13d7c6">关于编辑器</a></h3>
+<div id="outline-container-org34365ac" class="outline-3">
+<h3 id="org34365ac"><span class="section-number-3">1.4.</span> <a href="#org34365ac">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -620,8 +620,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org06ac25b" class="outline-3">
-<h3 id="org06ac25b"><span class="section-number-3">1.5.</span> <a href="#org06ac25b">关于代码</a></h3>
+<div id="outline-container-org2369bcd" class="outline-3">
+<h3 id="org2369bcd"><span class="section-number-3">1.5.</span> <a href="#org2369bcd">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -646,8 +646,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org6d8571e" class="outline-4">
-<h4 id="org6d8571e"><span class="section-number-4">1.5.1.</span> <a href="#org6d8571e">Lisp</a></h4>
+<div id="outline-container-org9ced852" class="outline-4">
+<h4 id="org9ced852"><span class="section-number-4">1.5.1.</span> <a href="#org9ced852">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -670,8 +670,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-orga50a061" class="outline-3">
-<h3 id="orga50a061"><span class="section-number-3">1.6.</span> <a href="#orga50a061">关于CPU</a></h3>
+<div id="outline-container-org0eed9d2" class="outline-3">
+<h3 id="org0eed9d2"><span class="section-number-3">1.6.</span> <a href="#org0eed9d2">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -686,8 +686,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org4086a61" class="outline-3">
-<h3 id="org4086a61"><span class="section-number-3">1.7.</span> <a href="#org4086a61">关于算法</a></h3>
+<div id="outline-container-org797cb7b" class="outline-3">
+<h3 id="org797cb7b"><span class="section-number-3">1.7.</span> <a href="#org797cb7b">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -706,8 +706,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgfa3c55e" class="outline-4">
-<h4 id="orgfa3c55e"><span class="section-number-4">1.7.1.</span> <a href="#orgfa3c55e">关于随机</a></h4>
+<div id="outline-container-org3fc72bc" class="outline-4">
+<h4 id="org3fc72bc"><span class="section-number-4">1.7.1.</span> <a href="#org3fc72bc">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -721,8 +721,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgcc93b49" class="outline-3">
-<h3 id="orgcc93b49"><span class="section-number-3">1.8.</span> <a href="#orgcc93b49">关于AI</a></h3>
+<div id="outline-container-orgc54ea8f" class="outline-3">
+<h3 id="orgc54ea8f"><span class="section-number-3">1.8.</span> <a href="#orgc54ea8f">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -732,8 +732,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org46fa782" class="outline-3">
-<h3 id="org46fa782"><span class="section-number-3">1.9.</span> <a href="#org46fa782">关于软件</a></h3>
+<div id="outline-container-org53a72d1" class="outline-3">
+<h3 id="org53a72d1"><span class="section-number-3">1.9.</span> <a href="#org53a72d1">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -744,8 +744,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orge1f311a" class="outline-4">
-<h4 id="orge1f311a"><span class="section-number-4">1.9.1.</span> <a href="#orge1f311a">SQLite</a></h4>
+<div id="outline-container-orge0c9a5d" class="outline-4">
+<h4 id="orge0c9a5d"><span class="section-number-4">1.9.1.</span> <a href="#orge0c9a5d">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -759,8 +759,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org82adbcb" class="outline-3">
-<h3 id="org82adbcb"><span class="section-number-3">1.10.</span> <a href="#org82adbcb">关于workflow</a></h3>
+<div id="outline-container-org816a309" class="outline-3">
+<h3 id="org816a309"><span class="section-number-3">1.10.</span> <a href="#org816a309">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -770,8 +770,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org9b17241" class="outline-2">
-<h2 id="org9b17241"><span class="section-number-2">2.</span> <a href="#org9b17241">棒棒视频</a></h2>
+<div id="outline-container-org3e7b583" class="outline-2">
+<h2 id="org3e7b583"><span class="section-number-2">2.</span> <a href="#org3e7b583">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -826,8 +826,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org5ac443b" class="outline-3">
-<h3 id="org5ac443b"><span class="section-number-3">2.1.</span> <a href="#org5ac443b">Veritasium 真理元素</a></h3>
+<div id="outline-container-orga3bf448" class="outline-3">
+<h3 id="orga3bf448"><span class="section-number-3">2.1.</span> <a href="#orga3bf448">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -852,8 +852,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org42152c2" class="outline-3">
-<h3 id="org42152c2"><span class="section-number-3">2.2.</span> <a href="#org42152c2">各种剧</a></h3>
+<div id="outline-container-org79ebc28" class="outline-3">
+<h3 id="org79ebc28"><span class="section-number-3">2.2.</span> <a href="#org79ebc28">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -877,8 +877,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgdb4442b" class="outline-3">
-<h3 id="orgdb4442b"><span class="section-number-3">2.3.</span> <a href="#orgdb4442b">电影</a></h3>
+<div id="outline-container-org2859789" class="outline-3">
+<h3 id="org2859789"><span class="section-number-3">2.3.</span> <a href="#org2859789">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -913,8 +913,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org660e897" class="outline-2">
-<h2 id="org660e897"><span class="section-number-2">3.</span> <a href="#org660e897">快乐游戏</a></h2>
+<div id="outline-container-org3adf814" class="outline-2">
+<h2 id="org3adf814"><span class="section-number-2">3.</span> <a href="#org3adf814">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -944,8 +944,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org0b5843b" class="outline-2">
-<h2 id="org0b5843b"><span class="section-number-2">4.</span> <a href="#org0b5843b">宝藏博主</a></h2>
+<div id="outline-container-org950f8df" class="outline-2">
+<h2 id="org950f8df"><span class="section-number-2">4.</span> <a href="#org950f8df">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -956,7 +956,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="orgeee08e4">
+<figure id="org70a6a70">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -964,8 +964,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org997ab4c" class="outline-2">
-<h2 id="org997ab4c"><span class="section-number-2">5.</span> <a href="#org997ab4c">有意思的</a></h2>
+<div id="outline-container-orgb7565bb" class="outline-2">
+<h2 id="orgb7565bb"><span class="section-number-2">5.</span> <a href="#orgb7565bb">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -997,8 +997,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org1a8ad14" class="outline-3">
-<h3 id="org1a8ad14"><span class="section-number-3">5.1.</span> <a href="#org1a8ad14">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orge03afe0" class="outline-3">
+<h3 id="orge03afe0"><span class="section-number-3">5.1.</span> <a href="#orge03afe0">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1010,8 +1010,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org5a02904" class="outline-2">
-<h2 id="org5a02904"><span class="section-number-2">6.</span> <a href="#org5a02904">我想玩的</a></h2>
+<div id="outline-container-orgb4dde82" class="outline-2">
+<h2 id="orgb4dde82"><span class="section-number-2">6.</span> <a href="#orgb4dde82">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1034,7 +1034,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-23 21:24</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-27 02:52</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-29 02:51</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
