--- a/content/daily/2021-05-19.html
+++ b/content/daily/2021-05-19.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-10-27 02:52 -->
+<!-- 2022-10-29 02:51 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不知道要写啥的第二篇日记</title>
@@ -46,17 +46,17 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgb62500a">1. 一大早</a></li>
-<li><a href="#orge7b54a3">2. 然后是剩下的无趣一天🙃</a></li>
-<li><a href="#org177c5cc">3. 科研训练</a></li>
-<li><a href="#orgd68f27c">4. 520</a></li>
+<li><a href="#org58b2e49">1. 一大早</a></li>
+<li><a href="#org8e45ac5">2. 然后是剩下的无趣一天🙃</a></li>
+<li><a href="#org021f52f">3. 科研训练</a></li>
+<li><a href="#org9a854fa">4. 520</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgb62500a" class="outline-2">
-<h2 id="orgb62500a"><span class="section-number-2">1.</span> <a href="#orgb62500a">一大早</a></h2>
+<div id="outline-container-org58b2e49" class="outline-2">
+<h2 id="org58b2e49"><span class="section-number-2">1.</span> <a href="#org58b2e49">一大早</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 概统八点半才上课，现在在宿舍干脆干点啥。 给博客加上了一个
@@ -65,8 +65,8 @@
 </div>
 </div>
 
-<div id="outline-container-orge7b54a3" class="outline-2">
-<h2 id="orge7b54a3"><span class="section-number-2">2.</span> <a href="#orge7b54a3">然后是剩下的无趣一天🙃</a></h2>
+<div id="outline-container-org8e45ac5" class="outline-2">
+<h2 id="org8e45ac5"><span class="section-number-2">2.</span> <a href="#org8e45ac5">然后是剩下的无趣一天🙃</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 下午数电实验，回宿舍了才发现U盘忘拿了……结果一共撑着伞在雨里走了三趟……
@@ -92,8 +92,8 @@
 </div>
 </div>
 
-<div id="outline-container-org177c5cc" class="outline-2">
-<h2 id="org177c5cc"><span class="section-number-2">3.</span> <a href="#org177c5cc">科研训练</a></h2>
+<div id="outline-container-org021f52f" class="outline-2">
+<h2 id="org021f52f"><span class="section-number-2">3.</span> <a href="#org021f52f">科研训练</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 哦对了，下午数电实验结束去找了学长，弄了弄科研训练的事情，大概就是一年弄出篇文章的样子。
@@ -101,8 +101,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgd68f27c" class="outline-2">
-<h2 id="orgd68f27c"><span class="section-number-2">4.</span> <a href="#orgd68f27c">520</a></h2>
+<div id="outline-container-org9a854fa" class="outline-2">
+<h2 id="org9a854fa"><span class="section-number-2">4.</span> <a href="#org9a854fa">520</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 又对了，明天520了（虽然和我莫得关系）。
@@ -116,7 +116,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:16</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-27 02:52</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-29 02:51</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-19.org">content/daily/2021-05-19.org</a></td></tr>
 </table>
