--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-10-27 02:52 -->
+<!-- 2022-10-29 02:51 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orge2508b7">1. 暑假</a>
+<li><a href="#orga14ae7a">1. 暑假</a>
 <ul>
-<li><a href="#org2118005">1.1. 夏令营</a></li>
+<li><a href="#orgc7e3059">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org1cc43f7">2. 打工</a></li>
-<li><a href="#org9d5c718">3. 我的928</a>
+<li><a href="#org7642e65">2. 打工</a></li>
+<li><a href="#org32aaa35">3. 我的928</a>
 <ul>
-<li><a href="#org610a2e4">3.1. 928演唱会(bushi</a></li>
+<li><a href="#orgfee7aca">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#orgb24d423">4. 他们的928</a></li>
-<li><a href="#orgc8290ba">5. 总结</a></li>
+<li><a href="#org48cca99">4. 他们的928</a></li>
+<li><a href="#org55af19d">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="orgad56c8a">
+<figure id="org58fae4f">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-orge2508b7" class="outline-2">
-<h2 id="orge2508b7"><span class="section-number-2">1.</span> <a href="#orge2508b7">暑假</a></h2>
+<div id="outline-container-orga14ae7a" class="outline-2">
+<h2 id="orga14ae7a"><span class="section-number-2">1.</span> <a href="#orga14ae7a">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-org2118005" class="outline-3">
-<h3 id="org2118005"><span class="section-number-3">1.1.</span> <a href="#org2118005">夏令营</a></h3>
+<div id="outline-container-orgc7e3059" class="outline-3">
+<h3 id="orgc7e3059"><span class="section-number-3">1.1.</span> <a href="#orgc7e3059">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-org1cc43f7" class="outline-2">
-<h2 id="org1cc43f7"><span class="section-number-2">2.</span> <a href="#org1cc43f7">打工</a></h2>
+<div id="outline-container-org7642e65" class="outline-2">
+<h2 id="org7642e65"><span class="section-number-2">2.</span> <a href="#org7642e65">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org9d5c718" class="outline-2">
-<h2 id="org9d5c718"><span class="section-number-2">3.</span> <a href="#org9d5c718">我的928</a></h2>
+<div id="outline-container-org32aaa35" class="outline-2">
+<h2 id="org32aaa35"><span class="section-number-2">3.</span> <a href="#org32aaa35">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org610a2e4" class="outline-3">
-<h3 id="org610a2e4"><span class="section-number-3">3.1.</span> <a href="#org610a2e4">928演唱会(bushi</a></h3>
+<div id="outline-container-orgfee7aca" class="outline-3">
+<h3 id="orgfee7aca"><span class="section-number-3">3.1.</span> <a href="#orgfee7aca">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orge47bf2a">
+<figure id="org82e116f">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org6206fe0">
+<figure id="orgef116e7">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgb24d423" class="outline-2">
-<h2 id="orgb24d423"><span class="section-number-2">4.</span> <a href="#orgb24d423">他们的928</a></h2>
+<div id="outline-container-org48cca99" class="outline-2">
+<h2 id="org48cca99"><span class="section-number-2">4.</span> <a href="#org48cca99">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgc8290ba" class="outline-2">
-<h2 id="orgc8290ba"><span class="section-number-2">5.</span> <a href="#orgc8290ba">总结</a></h2>
+<div id="outline-container-org55af19d" class="outline-2">
+<h2 id="org55af19d"><span class="section-number-2">5.</span> <a href="#org55af19d">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-27 02:52</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-29 02:51</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
