--- a/content/linux/vectored-io.html
+++ b/content/linux/vectored-io.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-10-29 09:23 -->
+<!-- 2022-10-29 09:25 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vectored IO</title>
@@ -46,13 +46,13 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orga189edc">1. What is Vectored IO</a></li>
-<li><a href="#org955c824">2. Vectored IO in Linux</a></li>
-<li><a href="#org1c09387">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
-<li><a href="#orga64ae64">4. Examples</a>
+<li><a href="#org8ff4892">1. What is Vectored IO</a></li>
+<li><a href="#org7a18878">2. Vectored IO in Linux</a></li>
+<li><a href="#orgd4c6bd8">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
+<li><a href="#org41056e9">4. Examples</a>
 <ul>
-<li><a href="#org94e19ec">4.1. <code>write()</code></a></li>
-<li><a href="#orga0aaee2">4.2. <code>writev()</code></a></li>
+<li><a href="#orge3beced">4.1. <code>write()</code></a></li>
+<li><a href="#org6597db1">4.2. <code>writev()</code></a></li>
 </ul>
 </li>
 </ul>
@@ -68,8 +68,8 @@
 <li><a href="https://www.oreilly.com/library/view/linux-system-programming/0596009585/ch04.html#:~:text=fun%20to%20implement.-,readv(%20)%20and%20writev(%20),-POSIX%201003.1%2D2001">Chapter 4. Advanced File I/O &#x2014; Linux System Programming by Robert Love</a></li>
 </ul>
 
-<div id="outline-container-orga189edc" class="outline-2">
-<h2 id="orga189edc"><span class="section-number-2">1.</span> <a href="#orga189edc">What is Vectored IO</a></h2>
+<div id="outline-container-org8ff4892" class="outline-2">
+<h2 id="org8ff4892"><span class="section-number-2">1.</span> <a href="#org8ff4892">What is Vectored IO</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <i>Vectored IO</i> is doing IO with <b>a vector of buffers</b>, instead of using
@@ -80,8 +80,8 @@ set of buffers.
 </div>
 </div>
 
-<div id="outline-container-org955c824" class="outline-2">
-<h2 id="org955c824"><span class="section-number-2">2.</span> <a href="#org955c824">Vectored IO in Linux</a></h2>
+<div id="outline-container-org7a18878" class="outline-2">
+<h2 id="org7a18878"><span class="section-number-2">2.</span> <a href="#org7a18878">Vectored IO in Linux</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <code>readv()</code> (scatter input) and <code>writev()</code> (gather output) are Linux
@@ -119,8 +119,8 @@ Each buffer in the <code>iov</code> array is a <code>struct iovec</code>:
 </div>
 </div>
 
-<div id="outline-container-org1c09387" class="outline-2">
-<h2 id="org1c09387"><span class="section-number-2">3.</span> <a href="#org1c09387">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
+<div id="outline-container-orgd4c6bd8" class="outline-2">
+<h2 id="orgd4c6bd8"><span class="section-number-2">3.</span> <a href="#orgd4c6bd8">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Traditional <code>read()</code> and <code>write()</code> functions have similar signatures
@@ -137,12 +137,12 @@ only read from <code>buf</code>).
 </div>
 </div>
 
-<div id="outline-container-orga64ae64" class="outline-2">
-<h2 id="orga64ae64"><span class="section-number-2">4.</span> <a href="#orga64ae64">Examples</a></h2>
+<div id="outline-container-org41056e9" class="outline-2">
+<h2 id="org41056e9"><span class="section-number-2">4.</span> <a href="#org41056e9">Examples</a></h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-org94e19ec" class="outline-3">
-<h3 id="org94e19ec"><span class="section-number-3">4.1.</span> <a href="#org94e19ec"><code>write()</code></a></h3>
+<div id="outline-container-orge3beced" class="outline-3">
+<h3 id="orge3beced"><span class="section-number-3">4.1.</span> <a href="#orge3beced"><code>write()</code></a></h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Printing a message to stdout with <code>write()</code>:
@@ -165,8 +165,8 @@ Printing a message to stdout with <code>write()</code>:
 </div>
 </div>
 
-<div id="outline-container-orga0aaee2" class="outline-3">
-<h3 id="orga0aaee2"><span class="section-number-3">4.2.</span> <a href="#orga0aaee2"><code>writev()</code></a></h3>
+<div id="outline-container-org6597db1" class="outline-3">
+<h3 id="org6597db1"><span class="section-number-3">4.2.</span> <a href="#org6597db1"><code>writev()</code></a></h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Splitting the message into 3 separate buffers and printing them to
@@ -207,7 +207,7 @@ stdout with <code>writev()</code>:
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-22 16:07</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-22 17:06</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-29 09:23</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-29 09:25</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/linux/vectored-io.org">content/linux/vectored-io.org</a></td></tr>
 </table>
