--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-10-29 09:25 -->
+<!-- 2022-10-29 09:37 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,47 +46,47 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org028631d">1. 妙妙文章</a>
+<li><a href="#org8dce085">1. 妙妙文章</a>
 <ul>
-<li><a href="#org63f2731">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#org6c974bf">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org8a018bb">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org8b9ae54">1.4. 关于编辑器</a></li>
-<li><a href="#orgbdddc41">1.5. 关于代码</a>
+<li><a href="#orgc191769">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#orgcce0dbd">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#orgde63963">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org21c75bf">1.4. 关于编辑器</a></li>
+<li><a href="#org8691d73">1.5. 关于代码</a>
 <ul>
-<li><a href="#orgf3e3a7a">1.5.1. Lisp</a></li>
+<li><a href="#orgf9b2157">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#orgfc28f4d">1.6. 关于CPU</a></li>
-<li><a href="#orgdf4f38f">1.7. 关于算法</a>
+<li><a href="#org0a0735a">1.6. 关于CPU</a></li>
+<li><a href="#orgee29bd5">1.7. 关于算法</a>
 <ul>
-<li><a href="#org084fdba">1.7.1. 关于随机</a></li>
+<li><a href="#org687bdda">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org0e44b0b">1.8. 关于AI</a></li>
-<li><a href="#orgb27767f">1.9. 关于软件</a>
+<li><a href="#orgf841260">1.8. 关于AI</a></li>
+<li><a href="#org03c0275">1.9. 关于软件</a>
 <ul>
-<li><a href="#orgf228fd4">1.9.1. SQLite</a></li>
+<li><a href="#org42d93af">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org5b01ad3">1.10. 关于workflow</a></li>
+<li><a href="#orgdc9e21d">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#orgd2e75eb">2. 棒棒视频</a>
+<li><a href="#org218a3e4">2. 棒棒视频</a>
 <ul>
-<li><a href="#orgfd75029">2.1. Veritasium 真理元素</a></li>
-<li><a href="#orga5d26a9">2.2. 各种剧</a></li>
-<li><a href="#orgd6f0756">2.3. 电影</a></li>
+<li><a href="#orgae3124f">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org9cd9470">2.2. 各种剧</a></li>
+<li><a href="#orgedd9bea">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgff545f1">3. 快乐游戏</a></li>
-<li><a href="#orge036da4">4. 宝藏博主</a></li>
-<li><a href="#org1028c8e">5. 有意思的</a>
+<li><a href="#org9791d12">3. 快乐游戏</a></li>
+<li><a href="#org9c06842">4. 宝藏博主</a></li>
+<li><a href="#org424a57d">5. 有意思的</a>
 <ul>
-<li><a href="#org154ba3d">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org2f5efb9">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org07abcaf">6. 我想玩的</a></li>
+<li><a href="#org01a8191">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -95,8 +95,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org028631d" class="outline-2">
-<h2 id="org028631d"><span class="section-number-2">1.</span> <a href="#org028631d">妙妙文章</a></h2>
+<div id="outline-container-org8dce085" class="outline-2">
+<h2 id="org8dce085"><span class="section-number-2">1.</span> <a href="#org8dce085">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -433,7 +433,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org7417fbb">
+<figure id="org09978f4">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -495,8 +495,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org63f2731" class="outline-3">
-<h3 id="org63f2731"><span class="section-number-3">1.1.</span> <a href="#org63f2731">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-orgc191769" class="outline-3">
+<h3 id="orgc191769"><span class="section-number-3">1.1.</span> <a href="#orgc191769">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -537,8 +537,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-org6c974bf" class="outline-3">
-<h3 id="org6c974bf"><span class="section-number-3">1.2.</span> <a href="#org6c974bf">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgcce0dbd" class="outline-3">
+<h3 id="orgcce0dbd"><span class="section-number-3">1.2.</span> <a href="#orgcce0dbd">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -568,8 +568,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org8a018bb" class="outline-3">
-<h3 id="org8a018bb"><span class="section-number-3">1.3.</span> <a href="#org8a018bb">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-orgde63963" class="outline-3">
+<h3 id="orgde63963"><span class="section-number-3">1.3.</span> <a href="#orgde63963">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -603,8 +603,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org8b9ae54" class="outline-3">
-<h3 id="org8b9ae54"><span class="section-number-3">1.4.</span> <a href="#org8b9ae54">关于编辑器</a></h3>
+<div id="outline-container-org21c75bf" class="outline-3">
+<h3 id="org21c75bf"><span class="section-number-3">1.4.</span> <a href="#org21c75bf">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -620,8 +620,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orgbdddc41" class="outline-3">
-<h3 id="orgbdddc41"><span class="section-number-3">1.5.</span> <a href="#orgbdddc41">关于代码</a></h3>
+<div id="outline-container-org8691d73" class="outline-3">
+<h3 id="org8691d73"><span class="section-number-3">1.5.</span> <a href="#org8691d73">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -646,8 +646,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgf3e3a7a" class="outline-4">
-<h4 id="orgf3e3a7a"><span class="section-number-4">1.5.1.</span> <a href="#orgf3e3a7a">Lisp</a></h4>
+<div id="outline-container-orgf9b2157" class="outline-4">
+<h4 id="orgf9b2157"><span class="section-number-4">1.5.1.</span> <a href="#orgf9b2157">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -670,8 +670,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-orgfc28f4d" class="outline-3">
-<h3 id="orgfc28f4d"><span class="section-number-3">1.6.</span> <a href="#orgfc28f4d">关于CPU</a></h3>
+<div id="outline-container-org0a0735a" class="outline-3">
+<h3 id="org0a0735a"><span class="section-number-3">1.6.</span> <a href="#org0a0735a">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -686,8 +686,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-orgdf4f38f" class="outline-3">
-<h3 id="orgdf4f38f"><span class="section-number-3">1.7.</span> <a href="#orgdf4f38f">关于算法</a></h3>
+<div id="outline-container-orgee29bd5" class="outline-3">
+<h3 id="orgee29bd5"><span class="section-number-3">1.7.</span> <a href="#orgee29bd5">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -706,8 +706,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org084fdba" class="outline-4">
-<h4 id="org084fdba"><span class="section-number-4">1.7.1.</span> <a href="#org084fdba">关于随机</a></h4>
+<div id="outline-container-org687bdda" class="outline-4">
+<h4 id="org687bdda"><span class="section-number-4">1.7.1.</span> <a href="#org687bdda">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -721,8 +721,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org0e44b0b" class="outline-3">
-<h3 id="org0e44b0b"><span class="section-number-3">1.8.</span> <a href="#org0e44b0b">关于AI</a></h3>
+<div id="outline-container-orgf841260" class="outline-3">
+<h3 id="orgf841260"><span class="section-number-3">1.8.</span> <a href="#orgf841260">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -732,8 +732,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgb27767f" class="outline-3">
-<h3 id="orgb27767f"><span class="section-number-3">1.9.</span> <a href="#orgb27767f">关于软件</a></h3>
+<div id="outline-container-org03c0275" class="outline-3">
+<h3 id="org03c0275"><span class="section-number-3">1.9.</span> <a href="#org03c0275">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -744,8 +744,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orgf228fd4" class="outline-4">
-<h4 id="orgf228fd4"><span class="section-number-4">1.9.1.</span> <a href="#orgf228fd4">SQLite</a></h4>
+<div id="outline-container-org42d93af" class="outline-4">
+<h4 id="org42d93af"><span class="section-number-4">1.9.1.</span> <a href="#org42d93af">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -759,8 +759,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org5b01ad3" class="outline-3">
-<h3 id="org5b01ad3"><span class="section-number-3">1.10.</span> <a href="#org5b01ad3">关于workflow</a></h3>
+<div id="outline-container-orgdc9e21d" class="outline-3">
+<h3 id="orgdc9e21d"><span class="section-number-3">1.10.</span> <a href="#orgdc9e21d">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -770,8 +770,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgd2e75eb" class="outline-2">
-<h2 id="orgd2e75eb"><span class="section-number-2">2.</span> <a href="#orgd2e75eb">棒棒视频</a></h2>
+<div id="outline-container-org218a3e4" class="outline-2">
+<h2 id="org218a3e4"><span class="section-number-2">2.</span> <a href="#org218a3e4">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -820,14 +820,15 @@ Practical, but also works on the human level in this case.
 <li><a href="https://www.bilibili.com/video/BV1ht4y1j7HN">《癔症》：童年噩梦</a> 结尾看到"声音片段取材自真实录音"惊了</li>
 <li><a href="https://www.bilibili.com/video/BV1ae4y187wg">《界》：一界之隔，人神皆非！</a> 好看, 就是字闪得太快了, 看不清&#x2026;</li>
 <li><a href="https://b23.tv/etM5HXb">《齐日迈》：迈一步，即深渊？</a> 战胜自己</li>
+<li><a href="https://www.bilibili.com/video/BV1Nt4y1u7cH">《荧惑归途》：错过这次 就要两年后才能回家了！</a> 别忘了回家~</li>
 </ul></li>
 <li><a href="https://www.bilibili.com/video/BV1p14y1h7uL">充电宝宇宙，漫威看了都说牛【值不值得买第571期】</a> 为醋包饺子的典范,
 把充电宝当成五号电池用, 就是性价比太低了</li>
 </ul>
 </div>
 
-<div id="outline-container-orgfd75029" class="outline-3">
-<h3 id="orgfd75029"><span class="section-number-3">2.1.</span> <a href="#orgfd75029">Veritasium 真理元素</a></h3>
+<div id="outline-container-orgae3124f" class="outline-3">
+<h3 id="orgae3124f"><span class="section-number-3">2.1.</span> <a href="#orgae3124f">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -852,8 +853,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orga5d26a9" class="outline-3">
-<h3 id="orga5d26a9"><span class="section-number-3">2.2.</span> <a href="#orga5d26a9">各种剧</a></h3>
+<div id="outline-container-org9cd9470" class="outline-3">
+<h3 id="org9cd9470"><span class="section-number-3">2.2.</span> <a href="#org9cd9470">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -877,8 +878,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgd6f0756" class="outline-3">
-<h3 id="orgd6f0756"><span class="section-number-3">2.3.</span> <a href="#orgd6f0756">电影</a></h3>
+<div id="outline-container-orgedd9bea" class="outline-3">
+<h3 id="orgedd9bea"><span class="section-number-3">2.3.</span> <a href="#orgedd9bea">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -913,8 +914,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgff545f1" class="outline-2">
-<h2 id="orgff545f1"><span class="section-number-2">3.</span> <a href="#orgff545f1">快乐游戏</a></h2>
+<div id="outline-container-org9791d12" class="outline-2">
+<h2 id="org9791d12"><span class="section-number-2">3.</span> <a href="#org9791d12">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -944,8 +945,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orge036da4" class="outline-2">
-<h2 id="orge036da4"><span class="section-number-2">4.</span> <a href="#orge036da4">宝藏博主</a></h2>
+<div id="outline-container-org9c06842" class="outline-2">
+<h2 id="org9c06842"><span class="section-number-2">4.</span> <a href="#org9c06842">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -956,7 +957,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org97d85ac">
+<figure id="orge1813fa">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -964,8 +965,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org1028c8e" class="outline-2">
-<h2 id="org1028c8e"><span class="section-number-2">5.</span> <a href="#org1028c8e">有意思的</a></h2>
+<div id="outline-container-org424a57d" class="outline-2">
+<h2 id="org424a57d"><span class="section-number-2">5.</span> <a href="#org424a57d">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -997,8 +998,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org154ba3d" class="outline-3">
-<h3 id="org154ba3d"><span class="section-number-3">5.1.</span> <a href="#org154ba3d">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org2f5efb9" class="outline-3">
+<h3 id="org2f5efb9"><span class="section-number-3">5.1.</span> <a href="#org2f5efb9">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1010,8 +1011,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org07abcaf" class="outline-2">
-<h2 id="org07abcaf"><span class="section-number-2">6.</span> <a href="#org07abcaf">我想玩的</a></h2>
+<div id="outline-container-org01a8191" class="outline-2">
+<h2 id="org01a8191"><span class="section-number-2">6.</span> <a href="#org01a8191">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1033,8 +1034,8 @@ Always check your friendship before terminating it.  hhhh</li>
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-10-23 21:24</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-29 09:25</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-10-29 09:22</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-29 09:37</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
