--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-10-29 09:25 -->
+<!-- 2022-10-29 09:36 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgb19978f">1. 暑假</a>
+<li><a href="#org051662c">1. 暑假</a>
 <ul>
-<li><a href="#orgf30b596">1.1. 夏令营</a></li>
+<li><a href="#org434f264">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org3c32ef4">2. 打工</a></li>
-<li><a href="#org2d1b74c">3. 我的928</a>
+<li><a href="#org100821b">2. 打工</a></li>
+<li><a href="#orgc36d8c7">3. 我的928</a>
 <ul>
-<li><a href="#org9e56b6a">3.1. 928演唱会(bushi</a></li>
+<li><a href="#orge90d79a">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#orgafa946b">4. 他们的928</a></li>
-<li><a href="#org899c34b">5. 总结</a></li>
+<li><a href="#org1d74476">4. 他们的928</a></li>
+<li><a href="#orgb5943ec">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="org2499d41">
+<figure id="org095d2cf">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-orgb19978f" class="outline-2">
-<h2 id="orgb19978f"><span class="section-number-2">1.</span> <a href="#orgb19978f">暑假</a></h2>
+<div id="outline-container-org051662c" class="outline-2">
+<h2 id="org051662c"><span class="section-number-2">1.</span> <a href="#org051662c">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-orgf30b596" class="outline-3">
-<h3 id="orgf30b596"><span class="section-number-3">1.1.</span> <a href="#orgf30b596">夏令营</a></h3>
+<div id="outline-container-org434f264" class="outline-3">
+<h3 id="org434f264"><span class="section-number-3">1.1.</span> <a href="#org434f264">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-org3c32ef4" class="outline-2">
-<h2 id="org3c32ef4"><span class="section-number-2">2.</span> <a href="#org3c32ef4">打工</a></h2>
+<div id="outline-container-org100821b" class="outline-2">
+<h2 id="org100821b"><span class="section-number-2">2.</span> <a href="#org100821b">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org2d1b74c" class="outline-2">
-<h2 id="org2d1b74c"><span class="section-number-2">3.</span> <a href="#org2d1b74c">我的928</a></h2>
+<div id="outline-container-orgc36d8c7" class="outline-2">
+<h2 id="orgc36d8c7"><span class="section-number-2">3.</span> <a href="#orgc36d8c7">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org9e56b6a" class="outline-3">
-<h3 id="org9e56b6a"><span class="section-number-3">3.1.</span> <a href="#org9e56b6a">928演唱会(bushi</a></h3>
+<div id="outline-container-orge90d79a" class="outline-3">
+<h3 id="orge90d79a"><span class="section-number-3">3.1.</span> <a href="#orge90d79a">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org5c715ff">
+<figure id="org7887419">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org4e7c2ef">
+<figure id="org82c6211">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgafa946b" class="outline-2">
-<h2 id="orgafa946b"><span class="section-number-2">4.</span> <a href="#orgafa946b">他们的928</a></h2>
+<div id="outline-container-org1d74476" class="outline-2">
+<h2 id="org1d74476"><span class="section-number-2">4.</span> <a href="#org1d74476">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org899c34b" class="outline-2">
-<h2 id="org899c34b"><span class="section-number-2">5.</span> <a href="#org899c34b">总结</a></h2>
+<div id="outline-container-orgb5943ec" class="outline-2">
+<h2 id="orgb5943ec"><span class="section-number-2">5.</span> <a href="#orgb5943ec">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-29 09:25</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-29 09:36</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
